fixed text align in dropdowns

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ form ul *:not(ul div) {
 }
 #download, #advanced { display: none !important }
 .row { visibility: hidden }
-.dropdown-content { text-align: center !important }
+.dropdown-content li { text-align: center !important }
 canvas {
 	height: 100vw;
 	max-height: 40vh;
